<resources>
    <string name="app_name">Android P适配</string>
    <string name="camera">相机</string>
    <string name="take_photo_or_choose_image">拍照或选择图片</string>
    <string name="permission_deny">没有权限</string>

    <string name="file">文件</string>
    <string name="file_example">读写文件示例</string>


    <string name="notification">通知</string>
    <string name="notification_example">通知示例</string>

    <string name="saf">SAF</string>
    <string name="saf_example">文件存储框架</string>

    <string name="shortcut">快捷方式</string>
    <string name="shortcut_example">快捷方式</string>
</resources>
